# kdewin-installer

./: CMakeLists.txt  CTestConfig.cmake  Messages.sh  changelog.txt  config-local.txt  config-sample.txt  config.h.cmake  config.txt  config.txt.cmake  installer.pro  kde-installer.iss  kdewin-installer-sln.bat.cmake  mirror.lst  mirrors.lst.cmake  postinstall.txt  readme-cross-compile.txt  readme.txt  rebuild.bat  todo.txt
cmake/: macros.cmake
cmake/modules/: FindDoxygen.cmake  FindKDEWIN_INSTALLER.cmake  FindKDEWIN_Packager.cmake  FindPSDK.cmake  FindQt4.cmake  FindUPX.cmake  FindWinSCP.cmake  Findquazip.cmake  Win32Macros.cmake
configer/: CMakeLists.txt  design-packaging-system.txt  main.cpp
console/: CMakeLists.txt  console.pro  installerengineconsole.cpp  installerengineconsole.h  main.cpp
doc/: CMakeLists.txt  commit-digest.txt  design.txt  design.xmi  format-specifications.txt  installer.doxy  installer.doxy.cmake  kde-commit-digest-installer.sxw  makedoc.bat  readme.txt
doc/design/: design.xmi
doc/kde-commit-digest/: kde-commit-digest-installer.sxw
doc/manual/: index.html
gui/: CMakeLists.txt  complexwizard.cpp  complexwizard.h  dependenciespage.cpp  dependenciespage.h  dependenciespage.ui  downloadpage.cpp  downloadpage.h  downloadsettingspage.cpp  downloadsettingspage.h  downloadsettingspage.ui  enduserinstallmodepage.cpp  enduserinstallmodepage.h  enduserinstallmodepage.ui  enduserpackageselectorpage.cpp  enduserpackageselectorpage.h  enduserpackageselectorpage.ui  finishpage.cpp  finishpage.h  finishpage.ui  gui.pro  gui.qrc  gui.rc  installdirectorypage.cpp  installdirectorypage.h  installdirectorypage.ui  installerdialogs.cpp  installerdialogs.h  installerenginegui.cpp  installerenginegui.h  installpage.cpp  installpage.h  installtypepage.cpp  installtypepage.h  installtypepage.ui  installwizard.cpp  installwizard.h  installwizardpage.cpp  installwizardpage.h  internetsettingspage.cpp  (+33 more)
gui/themes/amarok/: CMakeLists.txt  gui.qrc  gui.rc  titlepage.ui
gui/themes/main/: CMakeLists.txt  dirty.xpm  gui.qrc  gui.qrc.cmake  installer.desktop.cmake  titlepage.ui
md5sum/: CMakeLists.txt  md5sum.cpp
menubuilder/: CMakeLists.txt  main.cpp
packager/: CMakeLists.txt  kdebase-apps-package.xml  kdegraphics-package.xml  list_first_manifest  main.cpp  packager.cpp  packager.h  packager.qrc  template-example.xml  template-kde.xml  template-qt.xml  template-qt4.xml  template-qt5.xml  template.xml  xmltemplatepackager.cpp  xmltemplatepackager.h
sha1sum/: CMakeLists.txt  sha1sum.cpp
shared/: CMakeLists.txt  ControlExternalInstaller  ExternalInstallerControl  configparser.cpp  configparser.h  controlexternalinstaller.cpp  controlexternalinstaller.h  database.cpp  database.h  debug.cpp  debug.h  downloader.cpp  downloader.h  downloader_p.h  downloaderprogress.cpp  downloaderprogress.h  externalinstallercontrol.cpp  externalinstallercontrol.h  filelistgenerator.cpp  filelistgenerator.h  globalconfig.cpp  globalconfig.h  hash.cpp  hash.h  hashfile.cpp  hashfile.h  hintfile.cpp  hintfile.h  installer.cpp  installer.h  installercallconfig.cpp  installercallconfig.h  installerengine.cpp  installerengine.h  installerprogress.cpp  installerprogress.h  installerupdate.cpp  installerupdate.h  linkfile.cpp  linkfile.h  (+47 more)
single-package-installer/: CMakeLists.txt  installerdialog.cpp  installerdialog.h  installerdialog.qrc  installerdialog.ui  installerenginesinglepackage.cpp  installerenginesinglepackage.h  main.cpp  single-package-installer.rc
social/: CMakeLists.txt  categorybutton.cpp  categorybutton.h  comment.cpp  comment.h  comment.ui  commentadd.cpp  commentadd.h  commentadd.ui  descriptionbrowser.cpp  descriptionbrowser.h  imagedownloader.cpp  imagedownloader.h  images.qrc.cmake  installerdialogs.h  installerenginesinglepackage.cpp  installerenginesinglepackage.h  installerenginesocial.cpp  installerenginesocial.h  installerprogress.cpp  installerprogress.h  installerprogresssocial.cpp  installerprogresssocial.h  installerprogresssocial.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qml  settingspage.cpp  settingspage.h  settingspage.ui  softwaredetails.cpp  softwaredetails.h  softwaredetails.ui  softwareitem.cpp  softwareitem.h
support/: cmake-opensuse-12-mingw32-toolchain-file.cmake  windres-i686-w64-mingw32  wine-i686-w64-mingw32.reg
tests/: CMakeLists.txt  test-attica.cpp  test-configparser.cpp  test-database.cpp  test-downloader.cpp  test-globalconfig.cpp  test-hashfile.cpp  test-hashfile.h  test-mirrors.cpp  test-misc.cpp  test-misc.h  test-package.cpp  test-packagelist-apachemodindex.cpp  test-packagelist-sourceforge-mirror.cpp  test-packagelist-sourceforge.cpp  test-packager.cpp  test-proxy.cpp  test-settings.cpp  test-startmenu.cpp  test-unpacker.cpp  tests.cpp  tests.pro
tests/data/: config-site.txt
tests/data/hashfile/: test-hashfile space.txt
translations/: installer-gui-de.ts  installer-gui-fr.ts
